# squashfs-async

./: Cargo.toml  README.md  checkalot.yaml
.cargo/: config.toml
src/: data.rs  deser.rs  directory_table.rs  error.rs  fragments.rs  lib.rs  metadata.rs  pools.rs  squashfuse.rs  squashfuse_bin.rs  superblock.rs  utils.rs
src/inodes/: directory.rs  file.rs  mod.rs  symlink.rs
tests/: analyze.py  main.rs  mount.rs  testdata.rs
