[package]
name = "squashfs-async"
description = "Parsing and reading of SquashFS archives, on top of any implementor of the tokio::io::AsyncRead and tokio::io::AsyncSeek traits."
authors = ["cpg <44120267+cpg314@users.noreply.github.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "README.md"]

[profile.release]
incremental = true
lto = "thin"

[[bin]]
name = "squashfuse-rs"
path = "src/squashfuse_bin.rs"
doctest = true

[dependencies]
anyhow = { version = "1.0.42", features = ["backtrace"] }
async-compression = { version = "^0.3.12", features = ["tokio", "zstd", "zlib", "xz"] }
async-fs = { version = "1.6.0", optional = true}
async-stream = "0.3.3"
async-trait = "0.1.51"
bincode = "1.3.3"
bitflags = "1.3.2"
bytes = "1.5.0"
clap = { version = "3.2.23", features = ["derive", "env", "wrap_help"] }
deadpool = "0.9.5"
fuser = "0.11.1"
fuser-async = { git = "https://github.com/cpg314/fuser-async", tag = "v0.1.1" }
futures = "0.3.15"
itertools = "0.10.1"
libc = "0.2.134"
memmap2 = { version = "0.5.8", optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0.38"
tokio = { version = "1.8.1", features = ["full"] }
tokio-util = { version = "0.7.4", features=["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
trait-set = "0.3.0"

[features]
default = ["memmap", "asyncfs"]
asyncfs = ["dep:async-fs"]
memmap = ["dep:memmap2"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tempfile = "3.2.0"
rand = "0.8.5"
iter-read = "0.3"
glob = "0.3.1"
rustc-hash = "1.1.0"
serde_json = "1.0.91"
procfs = "0.14.2"
